--- a/leadsmagnet-beta/public/index.html
+++ b/leadsmagnet-beta/public/index.html
@@ -6,10 +6,30 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="App to verify email"
+      content="App to collect leads"
     />
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="icon" href="favicon.ico">
     <title>Leads Magnet beta</title>
     <style type="text/css">
+    @font-face {
+   font-family: leadsmagnet;
+   src: url(Flamante-Round-Bold-FFP.ttf);
+}
+body{
+  margin: 0;
+  box-sizing: border-box;
+}
+.container{
+    width: 80%;
+    margin: auto;
+    overflow: hidden;
+    box-sizing: border-box;
+}
+@font-face {
+   font-family: gotham-light;
+   src: url(Gotham Light Italic.otf);
+}
     html { 
   background: url(Beta_Webpage.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -17,36 +37,85 @@
   -o-background-size: cover;
   background-size: cover;
 }
+.btn{
+  background: red;
+  color: white;
+  background: #FF414D 15% 15% no-repeat padding-box;
+  border: 0;
+  border-radius: 30px;
+  outline: none;
+  font-family: gotham-light;
+  margin: 0 auto;
+}
+.form-control{
+  margin-top: 30px;
+  border-radius: 30px;
+  outline: none;
+  font-family: gotham-light;
+  margin: 0 auto;
+  overflow: hidden;
+   white-space: nowrap;
+   box-sizing: border-box;
+   resize: vertical;
+   justify-content: center;
+}
+@viewport {
+  width: device-width ;
+  zoom: 1.0 ;
+}
 #root{
-  margin-top: 80px;
+  margin-top: 60px;
   padding: 10px;
   text-align: center;
   vertical-align: middle;
   font-size: 12px;
-}
-button{
-  background: red;
-  font-size: 20px;
-  border-radius: 12px;
-  color: white;
-}
-input{
-  font-size: 20px;
-  border-radius: 12px;
-  font-family: arial, sans-serif;
-  width:40%;
+  overflow: hidden;
+   margin-left: auto;
+    margin-right: auto;
 }
 h1{
   text-align: center;
-  font-family: arial, sans-serif;
-  font-size: 30px;
+  font-family: leadsmagnet;
+  font-size: 65px;
   letter-spacing: 2.9px;
+}
+h3{
+  text-align: center;
+  font-family: leadsmagnet;
+  color: #000000;
+  text-transform: uppercase;
+  font-size: 25px;
+  letter-spacing: 0px;
+  max-width: 50
+}
+img{
+  vertical-align: middle;
+}
+span{
+  font-size: 25px;
+  font-family: gotham-light;
+  letter-spacing: 0px;
+}
+.row{
+  margin-left: 220px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  resize: vertical;
+  overflow: hidden;
+}
+.input-group{
+  width: 150%;
+  resize: vertical;
+  box-sizing: border-box;
 }
   </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-  </div>
+    <div class="container mt-3">
+    <div id="root" align="center">
+</div>
+</div>
   </body>
 </html>
