--- a/leadsmagnet-beta/public/index.html
+++ b/leadsmagnet-beta/public/index.html
@@ -8,13 +8,13 @@
       name="description"
       content="App to collect leads"
     />
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="icon" href="images/favicon.ico">
     <title>Leads Magnet beta</title>
     <style type="text/css">
     @font-face {
    font-family: leadsmagnet;
-   src: url(Flamante-Round-Bold-FFP.ttf);
+   src: url(css/Flamante-Round-Bold-FFP.ttf);
 }
 body{
   margin: 0;
@@ -28,14 +28,15 @@ body{
 }
 @font-face {
    font-family: gotham-light;
-   src: url(Gotham Light Italic.otf);
+   src: url(css/Gotham Light Italic.otf);
 }
     html { 
-  background: url(Beta_Webpage.jpg) no-repeat center center fixed; 
+  background: url(images/LMBBeta_Webpage.gif) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  
 }
 .btn{
   background: red;
@@ -64,7 +65,7 @@ body{
   zoom: 1.0 ;
 }
 #root{
-  margin-top: 60px;
+  margin-top: 50px;
   padding: 10px;
   text-align: center;
   vertical-align: middle;
@@ -91,13 +92,19 @@ h3{
 img{
   vertical-align: middle;
 }
+img[src="LMresized.gif"] {
+  margin-right:110px;
+  background:no-repeat padding-box;
+  object-fit: cover;
+}
+
 span{
   font-size: 25px;
   font-family: gotham-light;
   letter-spacing: 0px;
 }
 .row{
-  margin-left: 220px;
+  margin-left: 110px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -105,7 +112,7 @@ span{
   overflow: hidden;
 }
 .input-group{
-  width: 150%;
+  width: 90%;
   resize: vertical;
   box-sizing: border-box;
 }
